[gd_scene load_steps=4 format=3 uid="uid://c0pt14wo0w1hj"]

[ext_resource type="FontFile" uid="uid://t078gmjhvlqq" path="res://fonts/Xolonium-Regular.ttf" id="1_s0t15"]
[ext_resource type="Script" path="res://Scenes/hud.gd" id="1_vu0pu"]

[sub_resource type="LabelSettings" id="LabelSettings_7vms7"]
font = ExtResource("1_s0t15")
font_size = 40
outline_color = Color(0, 0, 0, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_vu0pu")

[node name="ScoreBoard" type="Node2D" parent="."]
position = Vector2(800, 25)

[node name="LeftPaddleScore" type="Label" parent="ScoreBoard"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_right = -20.0
offset_bottom = 52.0
grow_horizontal = 0
text = "000"
label_settings = SubResource("LabelSettings_7vms7")
horizontal_alignment = 2

[node name="RightPaddleScore" type="Label" parent="ScoreBoard"]
offset_left = 20.0
offset_right = 220.0
offset_bottom = 52.0
text = "111"
label_settings = SubResource("LabelSettings_7vms7")
